<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraBasica"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/LinearLoyautCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:text="@string/tituloCal"
            android:textStyle="bold"
            android:textSize="32dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/baumans">

        </TextView>

        <EditText
            android:id="@+id/etPrimer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:hint="@string/num1"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/style_btn">

        </EditText>
        <EditText
            android:id="@+id/etSegundo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/num2"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/style_btn">

        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etRespues"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/resp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/style_btn">

            </EditText>

            <Button
                android:id="@+id/btLimpiar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/defa"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_edtxt">

            </Button>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btSum"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sum"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_edtxt">

            </Button>

            <Button
                android:id="@+id/btRest"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/rest"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/style_edtxt">

        </Button>

            <Button
                android:id="@+id/btMult"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/mult"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_edtxt">

            </Button>

            <Button
                android:id="@+id/btDiv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/div"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_edtxt">

            </Button>

        </LinearLayout>




    </LinearLayout>



</LinearLayout>